--- a/styles.css
+++ b/styles.css
@@ -61,71 +61,51 @@ header {
     margin-right: auto;
 }
 
+.tituloh{
+    display:flex;
+     justify-content: center;
+     font-size: 45px;
 
-.hobbies{ 
+}
+
+.containerh{
     display: flex;
+   justify-content: space-around;
+   
+}
+
+.titulohs{
+ text-align: center;
+}
+.hobbies{
+   margin-left: 10px;
+   margin-right: 10px;
+   margin-bottom: 50 px;
+   border: solid purple 2px;
+   padding: 20px;
+   align-content: left;
+   border-radius: 6px;
+   
+}
+.contenidoh{
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: poppins, sans-serif;
-    font-size: 50px;
-    margin-top: 0px;
-    justify-content: space-between;
-    max-width: fit-content;
-    margin-bottom: 5px;
-    
+    padding: 20px;
 }
 
-
-.Phobbie{
+.fullfiller{
+    margin-top: 80px;
+    margin-bottom: 60px;
+    justify-content: center;
     display: flex;
-    float: left;
-    width: 190px;
-    height: 130px;
-    margin: 50px;
-    font-size: 30px;
-
-    
-    
 }
-.tphobbies{
-margin-top: 40px;
-float: left;
-width: auto;
-display: flex;
 
-}
-.CPhobbie{
-    clear: both;
-    width:auto;
+.img{border: 10px solid white;
+    border-radius: 50%;
+    height: 220px;
+    width: 220px;
+    overflow: hidden;
+    margin-top: 40px;
+    margin-left: 10px;
+    background-color: #575757;
     display: flex;
-    margin: auto;
-    float: left;
-  
-}
-
-.Shobbie{ 
-    display: flex;
-    float:center;
-    width: 190px;
-    height: 130px;
-   margin-top: 50px;
-    margin-left: 500px;
-    font-size: 30px;
-    align-content: center;
-}
-.TShobbie{
-    margin-top: 45px;
-    float: left;
-    width: auto;
-    display: flex;
-    font-size: 30px;
-}
-
-.CShobbie{
-    clear: both;
-    width: auto;
-    display: flex;
-    float:inline-end;
-
-}
+    justify-content: center;}
